1.0.0-支持指标关联